--- a/package.json
+++ b/package.json
@@ -1,30 +1,12 @@
 {
   "private": true,
-  "name": "typed-interact-extension",
-  "version": "1.1.0",
+  "name": "@types/typed-interact-extension",
+  "version": "11.0.0",
   "scripts": {
-    "build": "echo building... && typings bundle --global -o out/index.d.ts",
-    "lint": "echo linting... && tslint \"**/*.ts\" -e \"source/**\" -e \"source-test/**\" -e \"out/**\" -e \"node_modules/**\" -e \"typings/**\"",
-    "browser-test": "echo running browser tests... && node npm-scripts/test \"test/**/*.ts\"",
-    "source-test": "echo running source tests... &&  echo no source test",
-    "test": "echo running server tests... && echo no server test",
-    "watch": "onchange -w \"**/*.ts\" -i -e \"out/**\" -- npm -s run build+test",
-    "publish": "npm -s run lint+build+test && echo please publish to typings/registry",
-    "all-tests": "npm run browser-test",
-    "build+test": "npm run build && npm run all-tests",
-    "lint+build+test": "npm run lint && npm run build+test",
-    "prepublish": "typings install"
+    "watch": "node_modules\\.bin\\tsc -w -p ."
   },
   "devDependencies": {
-    "blue-tape": "^0.2.0",
-    "jspm": "^0.16.42",
-    "onchange": "^2.5.0",
-    "stream": "0.0.2",
-    "tap-spec": "^4.1.1",
-    "tape-run": "^2.1.4",
-    "ts-node": "^1.2.2",
-    "tslint": "^3.14.0",
-    "tslint-config-typings": "^0.2.3",
-    "typings": "^1.3.2"
+    "@types/jquery": "^1.10.35",
+    "typescript": "^3.3.3"
   }
 }
